tests/codegen-anf/fail/021-for-factorial-scoped.hyg
let mutable y = 1;
for (let mutable x = 1; x < 5; x <- x + 1) y <- y * x;
assert (y = 120)
